--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
 }
 body {
   display: flex;
+  flex-direction: column;
+  height: 100vh;
   justify-content: center;
   align-items: center;
   background: var(--very-dark-blue-main-bg, #0d192c);
